Develop | Created a website

--- a/style.css
+++ b/style.css
@@ -41,85 +41,294 @@ h4 {
   font-weight: 800;
 }
 
-.btn {
+.btn, .web-container footer a::before {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 700;
-  font-size: 1.125rem;
+  font-size: 1rem;
   text-align: center;
   line-height: 28px;
   color: #fff;
-  padding: 14px 32px;
+  padding: 10px 24px;
   border-radius: 28px;
   text-decoration: none;
   display: inline-block;
 }
+@media (min-width: 1440px) {
+  .btn, .web-container footer a::before {
+    font-size: 1.125rem;
+    padding: 14px 31px;
+  }
+}
 
-.container {
+p {
+  font-size: 1rem;
+  color: #83869A;
+  line-height: 1.6rem;
+}
+@media (min-width: 1440px) {
+  p {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.logo {
+  width: 90px;
+}
+@media (min-width: 1440px) {
+  .logo {
+    width: 114px;
+  }
+}
+
+.web-container {
+  width: 100%;
   font-family: "Plus Jakarta Sans", sans-serif;
-  width: 100vw;
+  padding-top: 1rem;
   overflow: hidden;
 }
-.container main {
-  margin: 1.5rem 10.3rem 6.9rem 10.3rem;
+@media (min-width: 768px) {
+  .web-container {
+    padding-top: 1.5rem;
+  }
 }
-.container main nav {
+.web-container main nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 5rem;
+  position: relative;
+  z-index: 2;
+  padding-inline: 1rem;
+  margin-bottom: 2.4rem;
 }
-.container main nav a {
+@media (min-width: 768px) {
+  .web-container main nav {
+    padding-inline: 2.5rem;
+    margin-bottom: 3.1rem;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container main nav {
+    padding-inline: 10.3rem;
+  }
+}
+.web-container main nav a {
   background-color: #13183f;
 }
-.container main .hero {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.web-container main nav a:hover {
+  background-color: #666ca3;
 }
-.container main .hero .hero-text {
-  width: 51%;
+@media (min-width: 768px) {
+  .web-container main .hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 9rem;
+  }
 }
-.container main .hero .hero-text h1 {
-  font-size: 3.5rem;
+@media (min-width: 1440px) {
+  .web-container main .hero {
+    margin-bottom: 12rem;
+  }
+}
+.web-container main .hero .hero-text {
+  padding-inline: 1rem;
+  margin-bottom: 1.6rem;
+}
+@media (min-width: 768px) {
+  .web-container main .hero .hero-text {
+    padding-inline: 2.5rem;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container main .hero .hero-text {
+    padding-inline: 10.3rem;
+  }
+}
+.web-container main .hero .hero-text h1 {
+  font-size: 2.5rem;
+  line-height: 3.15rem;
   color: #13183f;
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.6rem;
 }
-.container main .hero .hero-text p {
-  font-size: 1.125rem;
-  color: #83869A;
-  line-height: 1.75rem;
-  margin-bottom: 2.5rem;
-  max-width: 80%;
+@media (min-width: 1440px) {
+  .web-container main .hero .hero-text h1 {
+    font-size: 3.5rem;
+    line-height: 70.5px;
+  }
 }
-.container main .hero .hero-text a {
+.web-container main .hero .hero-text p {
+  margin-bottom: 1.6rem;
+  width: 91%;
+}
+.web-container main .hero .hero-text a {
   background-image: linear-gradient(#ff6f48, #f02aa6);
-  padding: 18px 32px;
-  border-radius: 31px;
+  padding: 15px 37px;
+  border-radius: 31.5px;
 }
-.container main .hero .hero-img {
-  width: 55%;
+.web-container main .hero .hero-text a:hover {
+  opacity: 0.5;
 }
-.container main .hero .hero-img img {
-  position: relative;
-  z-index: -1;
-  transform: translate(41%, -20%) scale(1.6);
+@media (min-width: 1440px) {
+  .web-container main .hero .hero-text a {
+    padding: 17px 31px;
+  }
 }
-.container .courses {
-  background-image: linear-gradient(#FFFFFF, #F0F1FF);
-  padding: 0 10.3rem;
+.web-container main .hero .hero-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  -moz-column-gap: 1.9rem;
-       column-gap: 1.9rem;
-  row-gap: 3.5rem;
 }
-.container .courses div {
-  width: 350px;
-  height: 322px;
-  border-radius: 15px;
-  background-color: #fff;
+@media (min-width: 768px) {
+  .web-container main .hero .hero-img img {
+    transform: translate(32%, -12%) scale(1.8);
+    position: relative;
+    z-index: 1;
+  }
 }
-.container .courses .course-box-first {
+@media (min-width: 1440px) {
+  .web-container main .hero .hero-img img {
+    transform: translate(19%, -16%) scale(1.8);
+  }
+}
+.web-container .courses {
+  padding-inline: 1rem;
+  padding-bottom: 2.5rem;
+  background-image: linear-gradient(#FFFFFF, #F0F1FF);
+}
+@media (min-width: 768px) {
+  .web-container .courses {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+    padding-inline: 2.5rem;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container .courses {
+    grid-template-columns: repeat(3, 1fr);
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+    padding-inline: 10.3rem;
+    padding-bottom: 8.75rem;
+  }
+}
+.web-container .courses .course-box-first {
   background-image: linear-gradient(#ff6f48, #f02aa6);
+  border-radius: 10px;
+  padding: 24px 29px 32px 29px;
+  margin-bottom: 2.5rem;
+}
+@media (min-width: 768px) {
+  .web-container .courses .course-box-first {
+    padding-top: 56px;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container .courses .course-box-first {
+    padding-top: 64px;
+  }
+}
+.web-container .courses .course-box-first h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: #fff;
+}
+@media (min-width: 1440px) {
+  .web-container .courses .course-box-first h3 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+}
+.web-container .courses .course-box {
+  padding: 56px 29px 32px 29px;
+  margin-bottom: 2.5rem;
+  margin-inline: auto;
+  border-radius: 10px;
+  background-color: #fff;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .web-container .courses .course-box {
+    padding-right: 22px;
+    width: 100%;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container .courses .course-box {
+    padding: 64px 32px 40px 32px;
+  }
+}
+.web-container .courses .course-box .icon {
+  position: absolute;
+  top: 0;
+  left: 29px;
+  transform: translateY(-50%);
+}
+.web-container .courses .course-box .course-box-description h4 {
+  font-size: 1.25rem;
+  font-weight: 800;
+  line-height: 1.6rem;
+  color: #13183f;
+  margin-bottom: 1rem;
+}
+@media (min-width: 1440px) {
+  .web-container .courses .course-box .course-box-description h4 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+.web-container .courses .course-box .course-box-description p {
+  margin-bottom: 1.5rem;
+  overflow: hidden;
+}
+.web-container .courses .course-box a {
+  text-decoration: none;
+  color: #f74780;
+  font-size: 1.1rem;
+  font-weight: 700;
+  line-height: 1.75rem;
+}
+.web-container .courses .course-box a:hover {
+  color: #ffa7c3;
+}
+.web-container footer {
+  background-color: #13183f;
+  padding: 2.25rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .web-container footer {
+    padding-inline: 2.5rem;
+  }
+}
+@media (min-width: 1440px) {
+  .web-container footer {
+    padding-inline: 10.3rem;
+  }
+}
+.web-container footer a {
+  position: relative;
+  z-index: 2;
+}
+.web-container footer a::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: -1;
+  background-image: linear-gradient(#4851ff, #f02aa6);
+}
+.web-container footer a:hover::before {
+  opacity: 0.5;
 }/*# sourceMappingURL=style.css.map */
