--- a/style.scss
+++ b/style.scss
@@ -8,117 +8,339 @@ h4 {
     font-weight: 800;
 }
 
+// ===MEDIA MIXIN ====
+
+@mixin breakpoint ($size) {
+    @media (min-width: map-get(v.$breakpoints, $size)) {
+        @content
+    }
+}
+
+
 // === Button ===
 .btn {
     font: {
         family: v.$font;
         weight: 700;
-        size: v.$p-m;
+        size: v.$p-s;
     }
 
     text-align: center;
     line-height: 28px;
     color: v.$white;
-    padding: 14px 32px;
+    padding: 10px 24px;
     border-radius: 28px;
     text-decoration: none;
     display: inline-block;
+
+    @include breakpoint(monitor) {
+        font-size: v.$p-m;
+        padding: 14px 31px;
+    }
 }
+
+// ===paragraph===
+p {
+    font-size: v.$p-s;
+    color: v.$gray;
+    line-height: 1.6rem;
+
+    @include breakpoint(monitor) {
+        font-size: v.$p-m;
+        line-height: 1.75rem;
+    }
+}
+
+//===LOGO===
+.logo {
+    width: 90px;
+
+    @include breakpoint(monitor) {
+        width: 114px;
+    }
+}
+
+
 
 // === Main SCSS ===
 
-.container {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
+.web-container {
+    width: 100%;
     font-family: v.$font;
-    width: 100vw;
+    padding-top: 1rem;
     overflow: hidden;
 
+    @include breakpoint(tablet) {
+        padding-top: 1.5rem;
+    }
+
     main {
-        margin: 1.5rem 10.3rem 6.9rem 10.30rem;
 
-
-        //===NAVIGATION===
+        // ===NAVIGATION===
         nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 5rem;
 
+            position: relative;
+            z-index: 2;
+
+            padding-inline: 1rem;
+            margin-bottom: 2.4rem;
+
+            @include breakpoint(tablet) {
+                padding-inline: 2.5rem;
+                margin-bottom: 3.1rem;
+            }
+
+            @include breakpoint(monitor) {
+                padding-inline: 10.3rem;
+            }
 
             a {
                 background-color: v.$dark-blue;
+
+                &:hover {
+                    background-color: v.$blue;
+                }
             }
         }
 
         //===HERO DISPLAY===
         .hero {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            @include breakpoint(tablet) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-bottom: 9rem;
+            }
 
+            @include breakpoint(monitor) {
+                margin-bottom: 12rem;
+            }
 
 
             .hero-text {
-                width: 51%;
+                padding-inline: 1rem;
+                margin-bottom: 1.6rem;
+
+                @include breakpoint(tablet) {
+                    padding-inline: 2.5rem;
+                    margin-bottom: 0;
+                }
+
+                @include breakpoint(monitor) {
+                    padding-inline: 10.3rem;
+                }
+
 
                 h1 {
-                    font-size: v.$h1;
+                    font: {
+                        size: 2.5rem;
+                    }
+
+                    line-height: 3.15rem;
                     color: v.$dark-blue;
-                    margin-bottom: 1.8rem;
+                    margin-bottom: 1.6rem;
+
+                    @include breakpoint(monitor) {
+                        font-size: v.$h1;
+                        line-height: 70.5px;
+                    }
                 }
 
                 p {
-                    font-size: v.$p-m;
-                    color: v.$gray;
-                    line-height: 1.75rem;
-                    margin-bottom: 2.5rem;
-                    max-width: 80%;
-
+                    margin-bottom: 1.6rem;
+                    width: 91%;
                 }
 
                 a {
                     background-image: v.$light-gradient;
-                    padding: 18px 32px;
-                    border-radius: 31px;
-                }
+                    padding: 15px 37px;
+                    border-radius: 31.5px;
 
+                    &:hover {
+                        opacity: .5;
+                    }
+
+                    @include breakpoint(monitor) {
+                        padding: 17px 31px;
+                    }
+                }
             }
 
             .hero-img {
-                width: 55%;
-
-
                 img {
-                    position: relative;
-                    z-index: -1;
-                    transform: translate(41%, -20%) scale(1.6);
+                    object-fit: cover;
+                    width: 100%;
+
+                    @include breakpoint(tablet) {
+                        transform: translate(32%, -12%) scale(1.8);
+                        position: relative;
+                        z-index: 1;
+                    }
+
+                    @include breakpoint(monitor) {
+                        transform: translate(19%, -16%) scale(1.8);
+                    }
                 }
             }
         }
     }
 
-    // ====SECTION COURSES====
+    //===SECTION COURSES===
     .courses {
-        background-image: linear-gradient(#FFFFFF, #F0F1FF);
-        padding: 0 10.3rem;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 1.9rem;
-        row-gap: 3.5rem;
+        padding-inline: 1rem;
+        padding-bottom: 2.5rem;
 
-        div {
-            width: 350px;
-            height: 322px;
-            border-radius: 15px;
-            background-color: v.$white;
+        background-image: linear-gradient(#FFFFFF, #F0F1FF);
+
+
+        @include breakpoint(tablet) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-rows: 1fr;
+            column-gap: 10px;
+
+            padding-inline: 2.5rem;
         }
 
+        @include breakpoint(monitor) {
+            grid-template-columns: repeat(3, 1fr);
+            column-gap: 30px;
+            padding-inline: 10.3rem;
+            padding-bottom: 8.75rem;
+        }
+
+        //==FIRST BOX===
         .course-box-first {
             background-image: v.$light-gradient;
+            border-radius: 10px;
+            padding: 24px 29px 32px 29px;
+            margin-bottom: 2.5rem;
 
+            @include breakpoint(tablet) {
+                padding-top: 56px;
+            }
+
+            @include breakpoint(monitor) {
+                padding-top: 64px;
+            }
+
+            h3 {
+                font-size: 1.5rem;
+                line-height: 2rem;
+                color: v.$white;
+
+                @include breakpoint(monitor) {
+                    font-size: v.$h3;
+                    line-height: 2.5rem;
+                }
+            }
+        }
+
+        //===COURSE BOX===
+        .course-box {
+            padding: 56px 29px 32px 29px;
+            margin-bottom: 2.5rem;
+            margin-inline: auto;
+            border-radius: 10px;
+            background-color: v.$white;
+            position: relative;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            @include breakpoint(tablet) {
+                padding-right: 22px;
+                width: 100%;
+            }
+
+            @include breakpoint(monitor) {
+                padding: 64px 32px 40px 32px;
+            }
+
+
+
+            .icon {
+                position: absolute;
+                top: 0;
+                left: 29px;
+                transform: translateY(-50%);
+            }
+
+            .course-box-description {
+                h4 {
+                    font-size: 1.25rem;
+                    font-weight: 800;
+                    line-height: 1.6rem;
+                    color: v.$dark-blue;
+                    margin-bottom: 1rem;
+
+                    @include breakpoint(monitor) {
+                        font-size: v.$h4;
+                        line-height: 2rem;
+                    }
+                }
+
+                p {
+                    margin-bottom: 1.5rem;
+                    overflow: hidden;
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: v.$dark-pink;
+                font-size: 1.1rem;
+                font-weight: 700;
+                line-height: 1.75rem;
+
+                &:hover {
+                    color: v.$light-pink;
+                }
+
+            }
+        }
+    }
+
+    //===FOOTER===
+    footer {
+        background-color: v.$dark-blue;
+        padding: 2.25rem 1rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        @include breakpoint(tablet) {
+            padding-inline: 2.5rem;
+        }
+
+        @include breakpoint(monitor) {
+            padding-inline: 10.3rem;
+        }
+
+        a {
+            position: relative;
+            z-index: 2;
+
+            &::before {
+                @extend .btn;
+                content: "";
+                position: absolute;
+                top: 0px;
+                right: 0px;
+                bottom: 0px;
+                left: 0px;
+                z-index: -1;
+
+                background-image: v.$dark-gradient;
+            }
+
+            &:hover::before {
+                opacity: 0.5;
+            }
         }
     }
 }
